--- a/assets/style.css
+++ b/assets/style.css
@@ -1,39 +1,19 @@
-header{
-    background-color: gray;
-    display: flex;
-    flex: wrap;
-    justify-content: space-between;
-    margin-bottom: 10px;
-    height: 75px;
-align-items: center;
+body{
+    background-color: burlywood;
 }
 
-.questions{
+#startquiz{
     display: flex;
-    flex: wrap;
     justify-content: center;
-    margin: 10px;
-    padding: 5px;
-    width: 100%;
-    height: 50%;
-}
-
-.answers{
-    display: flex;
-    flex: wrap;
-    flex-direction: column;
     align-items: center;
-    margin: 10px;
-    padding: 5px;
-    width: 100%;
-    height: 50%;
 }
 
-hr{
-    width: 90%;
-    height: 5px;
-    background-color: black;
-    border: 5px bold black;
+#quizsect, #quiz, #time {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 button {
