added local storage functions

--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,7 @@ body{
     background-color: burlywood;
 }
 
-#startquiz{
+#startquiz, #end{
     display: flex;
     justify-content: center;
     align-items: center;
