added the score page

--- a/assets/style.css
+++ b/assets/style.css
@@ -8,7 +8,7 @@ body{
     align-items: center;
 }
 
-#quizsect, #quiz, #time {
+#quizsect, #quiz, #time, #scorepage {
     height: 100%;
     display: flex;
     flex-direction: column;
